Wed May 17 20:02:25 2000  Darrell Brunsch <brunsch@uci.edu>

        * ace/Dirent.h:
        * ace/Dirent.i:
        * ace/Makefile:
        * ace/Makefile.am:
        * ace/Makefile.bor:
        * ace/OS.h:
        * ace/OS.i:
        * ace/OS_Dirent.cpp: (added)
        * ace/OS_Dirent.h: (added)
        * ace/OS_Dirent.inl: (added)
        * ace/ace-dll.icc:
        * ace/ace-lib.icc:
        * ace/ace.icc:
        * ace/ace_dll.dsp:
        * ace/ace_dll_ce.dsp:
        * ace/ace_lib.dsp:
        * ace/config-all.h:

          Ladies and Gentlemen, you are witnessing the beginning of the
          end of ACE_OS as we know it.  That's right, I am taking on the
          bazillion lines of stuff in OS.*, and separating it into bite
          size pieces.  

          So this is the first step, kind of a test of concept.  I took
          the dirent methods and separated them out into a separate class
          (in its own files), ACE_OS_Dirent.  So now if one only wishes
          to use the dirent static methods, one only has to include
          OS_Dirent.h.  

          But what about all the code that thinks it is still in ACE_OS?
          Glad you asked, since ACE_OS now inherits from ACE_OS_Dirent,
          meaning using ACE_OS::opendir () and family still works.

          So eventually everything will be moved out, and ACE_OS will
          just be a shell of a class that inherits from the ACE_OS_* 
          classes (with maybe an ACE_ONLY_LATEST_AND_GREATEST thrown
          in here and there).

          Let's just hope that this works....

Wed May 17 19:01:52 2000  Carlos O'Ryan  <coryan@uci.edu>

        * bin/auto_compile:
          Fixed minor typos in the -smart_proxies option.

        * bin/run_all_list.pm:
          The path for one of the tests (InterOp-Naming) was broken, my
          fault.

Wed May 17 16:20:30 2000  Darrell Brunsch <brunsch@uci.edu>

        * ace/Future.cpp:
        * ace/Future.h:
        * ace/Future_Set.cpp: