@@ -1,3 +1,12 @@
+Wed May 17 20:25:21 2000  Darrell Brunsch <brunsch@uci.edu>
+
+        * ace/OS.h:
+        * ace/config-all.h:
+
+          Needed to move another define from OS.h to config-all 
+          (the ENOSYS to EFAULT define) since Borland doesn't
+          have ENOSYS defined.
+
 Wed May 17 20:02:25 2000  Darrell Brunsch <brunsch@uci.edu>
 
         * ace/Dirent.h:
